# CppSnippets

./: .gitignore  .gitmodules  README.md
src/c_curses_flash/: CMakeLists.txt
src/c_curses_flash/src/: main.c
src/c_curses_hw/: CMakeLists.txt
src/cli-utils/: CMakeLists.txt  README.md
src/cli-utils/.cache/clangd/index/: cxxopts.hpp.B4AB65D150F1DE25.idx  main.cpp.2BC5589B4EBF12D7.idx  main.cpp.7D78C888279BF1CB.idx  main.cpp.8DC2E051E4F2BA6C.idx  main.cpp.97DFF553C2DFD488.idx
src/cli-utils/src/cat/: main.cpp
src/cli-utils/src/exe1/: main.cpp
src/cli-utils/src/exe2/: main.cpp
src/cli-utils/src/tail/: main.cpp
src/cli-utils/src/win_tail/: main.cpp
src/cmake_advent_template/: CMakeLists.txt  README.md
src/cmake_advent_template/input/: input.txt
src/cmake_advent_template/src/: main.cpp
src/data-serialization-1/: CMakeLists.txt  README.md
src/data-serialization-1/src/: MyData.hpp  main.cpp
src/sqlite-hw/: CMakeLists.txt
src/sqlite-hw/src/: main.cpp
src/win_c_arpping/: CMakeLists.txt  README.md
src/win_cmake_helloworld/: CMakeLists.txt  README.md
src/win_cmake_helloworld/src/: main.cpp
src/win_performance_metrics/src/: main.cpp
src/win_performance_metrics_2/src/: main.cpp
src/win_performance_metrics_3/: .clangd  CMakeLists.txt
src/win_performance_metrics_3/src/: main.cpp
src/win_performance_metrics_3/util/: listmetrics.py
